feat: new work progress page addeed

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,8 @@
 ---
-import Welcome from '../components/Welcome.astro';
+import { TextHoverEffectDemo } from '../components/layout/text-hover-effect-demo';
 import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout>
-	<Welcome />
+	<TextHoverEffectDemo client:only/>
 </Layout>
